// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LogPlayerInformation スナップショット/active - 強調あり 1`] = `
<DocumentFragment>
  <div
    class="css-8myd60"
  >
    <div
      class="css-19tvp9s"
    >
      <p
        class="chakra-text css-1876eo0"
      >
        One Pair → Three of a Kind
      </p>
      <img
        alt="bubble"
        class="chakra-image css-13pr30p"
        src="/bubble.svg"
      />
    </div>
    <div
      class="css-70qvj9"
    >
      <div
        class="css-wxf7p2"
      >
        <div
          class="css-15b5zx5"
        >
          <svg
            fill="none"
            height="72"
            viewBox="0 0 61 72"
            width="61"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M12.4336 17.614C12.4336 7.88457 20.4352 0 30.3091 0C40.1829 0 48.1905 7.88457 48.1905 17.614C48.1905 27.3492 40.1829 35.2338 30.3091 35.2338C20.4352 35.2338 12.4336 27.3492 12.4336 17.614ZM30.4429 72.0003C42.2478 72.0003 52.931 67.3433 60.6312 59.8513V54.5366C60.6312 48.1099 55.2047 42.8941 48.505 42.8941H12.1262C5.42649 42.8941 0 48.1099 0 54.5366V59.5836C7.71835 67.2269 18.5046 72.0003 30.4429 72.0003Z"
              fill="#7777"
              fill-opacity="0.8"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
      <div
        class="css-wnxf2w"
      >
        <p
          class="chakra-text css-x7gufq"
        >
          Player1
        </p>
        <hr
          aria-orientation="horizontal"
          class="chakra-divider css-5c5tbj"
        />
        <div
          class="css-gmuwbf"
        >
          <p
            class="chakra-text css-1wh924d"
          >
            19,358
          </p>
          <p
            class="chakra-text css-eo8jpy"
          >
            pt
          </p>
        </div>
      </div>
    </div>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`LogPlayerInformation スナップショット/active - 強調なし 1`] = `
<DocumentFragment>
  <div
    class="css-8myd60"
  >
    <div
      class="css-19tvp9s"
    >
      <p
        class="chakra-text css-1876eo0"
      >
        One Pair → Three of a Kind
      </p>
      <img
        alt="bubble"
        class="chakra-image css-13pr30p"
        src="/bubble.svg"
      />
    </div>
    <div
      class="css-70qvj9"
    >
      <div
        class="css-y0vblb"
      >
        <div
          class="css-15b5zx5"
        >
          <svg
            fill="none"
            height="72"
            viewBox="0 0 61 72"
            width="61"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M12.4336 17.614C12.4336 7.88457 20.4352 0 30.3091 0C40.1829 0 48.1905 7.88457 48.1905 17.614C48.1905 27.3492 40.1829 35.2338 30.3091 35.2338C20.4352 35.2338 12.4336 27.3492 12.4336 17.614ZM30.4429 72.0003C42.2478 72.0003 52.931 67.3433 60.6312 59.8513V54.5366C60.6312 48.1099 55.2047 42.8941 48.505 42.8941H12.1262C5.42649 42.8941 0 48.1099 0 54.5366V59.5836C7.71835 67.2269 18.5046 72.0003 30.4429 72.0003Z"
              fill="#7777"
              fill-opacity="0.8"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
      <div
        class="css-1r2ihj4"
      >
        <p
          class="chakra-text css-x7gufq"
        >
          Player1
        </p>
        <hr
          aria-orientation="horizontal"
          class="chakra-divider css-5c5tbj"
        />
        <div
          class="css-gmuwbf"
        >
          <p
            class="chakra-text css-1wh924d"
          >
            19,358
          </p>
          <p
            class="chakra-text css-eo8jpy"
          >
            pt
          </p>
        </div>
      </div>
    </div>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`LogPlayerInformation スナップショット/all-in 1`] = `
<DocumentFragment>
  <div
    class="css-8myd60"
  >
    <div
      class="css-19tvp9s"
    >
      <p
        class="chakra-text css-1876eo0"
      >
        One Pair → Three of a Kind
      </p>
      <img
        alt="bubble"
        class="chakra-image css-13pr30p"
        src="/bubble.svg"
      />
    </div>
    <div
      class="css-70qvj9"
    >
      <div
        class="css-y0vblb"
      >
        <div
          class="css-15b5zx5"
        >
          <svg
            fill="none"
            height="72"
            viewBox="0 0 61 72"
            width="61"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M12.4336 17.614C12.4336 7.88457 20.4352 0 30.3091 0C40.1829 0 48.1905 7.88457 48.1905 17.614C48.1905 27.3492 40.1829 35.2338 30.3091 35.2338C20.4352 35.2338 12.4336 27.3492 12.4336 17.614ZM30.4429 72.0003C42.2478 72.0003 52.931 67.3433 60.6312 59.8513V54.5366C60.6312 48.1099 55.2047 42.8941 48.505 42.8941H12.1262C5.42649 42.8941 0 48.1099 0 54.5366V59.5836C7.71835 67.2269 18.5046 72.0003 30.4429 72.0003Z"
              fill="#B4171E"
              fill-opacity="0.8"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
      <div
        class="css-1r2ihj4"
      >
        <p
          class="chakra-text css-x7gufq"
        >
          Player1
        </p>
        <hr
          aria-orientation="horizontal"
          class="chakra-divider css-5c5tbj"
        />
        <div
          class="css-gmuwbf"
        >
          <p
            class="chakra-text css-12v1cak"
          >
            0
          </p>
          <p
            class="chakra-text css-1ow382j"
          >
            pt
          </p>
        </div>
      </div>
    </div>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`LogPlayerInformation スナップショット/drop 1`] = `
<DocumentFragment>
  <div
    class="css-8myd60"
  >
    <div
      class="css-19tvp9s"
    >
      <p
        class="chakra-text css-1876eo0"
      >
        One Pair → Three of a Kind
      </p>
      <img
        alt="bubble"
        class="chakra-image css-13pr30p"
        src="/bubble.svg"
      />
    </div>
    <div
      class="css-70qvj9"
    >
      <div
        class="css-y0vblb"
      >
        <div
          class="css-15b5zx5"
        >
          <svg
            fill="none"
            height="72"
            viewBox="0 0 61 72"
            width="61"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M12.4336 17.614C12.4336 7.88457 20.4352 0 30.3091 0C40.1829 0 48.1905 7.88457 48.1905 17.614C48.1905 27.3492 40.1829 35.2338 30.3091 35.2338C20.4352 35.2338 12.4336 27.3492 12.4336 17.614ZM30.4429 72.0003C42.2478 72.0003 52.931 67.3433 60.6312 59.8513V54.5366C60.6312 48.1099 55.2047 42.8941 48.505 42.8941H12.1262C5.42649 42.8941 0 48.1099 0 54.5366V59.5836C7.71835 67.2269 18.5046 72.0003 30.4429 72.0003Z"
              fill="#7777"
              fill-opacity="0.8"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
      <div
        class="css-1r2ihj4"
      >
        <p
          class="chakra-text css-x7gufq"
        >
          Player1
        </p>
        <hr
          aria-orientation="horizontal"
          class="chakra-divider css-5c5tbj"
        />
        <div
          class="css-gmuwbf"
        >
          <p
            class="chakra-text css-1wh924d"
          >
            19,358
          </p>
          <p
            class="chakra-text css-eo8jpy"
          >
            pt
          </p>
        </div>
      </div>
    </div>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`LogPlayerInformation スナップショット/out 1`] = `
<DocumentFragment>
  <div
    class="css-8myd60"
  >
    <div
      class="css-19tvp9s"
    >
      <p
        class="chakra-text css-1876eo0"
      >
        One Pair → Three of a Kind
      </p>
      <img
        alt="bubble"
        class="chakra-image css-13pr30p"
        src="/bubble.svg"
      />
    </div>
    <div
      class="css-70qvj9"
    >
      <div
        class="css-y0vblb"
      >
        <div
          class="css-15b5zx5"
        >
          <svg
            fill="none"
            height="72"
            viewBox="0 0 61 72"
            width="61"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M12.4336 17.614C12.4336 7.88457 20.4352 0 30.3091 0C40.1829 0 48.1905 7.88457 48.1905 17.614C48.1905 27.3492 40.1829 35.2338 30.3091 35.2338C20.4352 35.2338 12.4336 27.3492 12.4336 17.614ZM30.4429 72.0003C42.2478 72.0003 52.931 67.3433 60.6312 59.8513V54.5366C60.6312 48.1099 55.2047 42.8941 48.505 42.8941H12.1262C5.42649 42.8941 0 48.1099 0 54.5366V59.5836C7.71835 67.2269 18.5046 72.0003 30.4429 72.0003Z"
              fill="#7777"
              fill-opacity="0.8"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
      <div
        class="css-1r2ihj4"
      >
        <p
          class="chakra-text css-x7gufq"
        >
          Player1
        </p>
        <hr
          aria-orientation="horizontal"
          class="chakra-divider css-5c5tbj"
        />
        <div
          class="css-gmuwbf"
        >
          <p
            class="chakra-text css-1wh924d"
          >
            0
          </p>
          <p
            class="chakra-text css-eo8jpy"
          >
            pt
          </p>
        </div>
      </div>
    </div>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`LogPlayerInformation スナップショット/自分のターンではない 1`] = `
<DocumentFragment>
  <div
    class="css-8myd60"
  >
    <div
      class="css-19tvp9s"
    >
      <p
        class="chakra-text css-1876eo0"
      >
        High Card
      </p>
      <img
        alt="bubble"
        class="chakra-image css-13pr30p"
        src="/bubble.svg"
      />
    </div>
    <div
      class="css-70qvj9"
    >
      <div
        class="css-y0vblb"
      >
        <div
          class="css-15b5zx5"
        >
          <svg
            fill="none"
            height="72"
            viewBox="0 0 61 72"
            width="61"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M12.4336 17.614C12.4336 7.88457 20.4352 0 30.3091 0C40.1829 0 48.1905 7.88457 48.1905 17.614C48.1905 27.3492 40.1829 35.2338 30.3091 35.2338C20.4352 35.2338 12.4336 27.3492 12.4336 17.614ZM30.4429 72.0003C42.2478 72.0003 52.931 67.3433 60.6312 59.8513V54.5366C60.6312 48.1099 55.2047 42.8941 48.505 42.8941H12.1262C5.42649 42.8941 0 48.1099 0 54.5366V59.5836C7.71835 67.2269 18.5046 72.0003 30.4429 72.0003Z"
              fill="#7777"
              fill-opacity="0.8"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
      <div
        class="css-1r2ihj4"
      >
        <p
          class="chakra-text css-x7gufq"
        >
          Player2
        </p>
        <hr
          aria-orientation="horizontal"
          class="chakra-divider css-5c5tbj"
        />
        <div
          class="css-gmuwbf"
        >
          <p
            class="chakra-text css-1wh924d"
          >
            19,358
          </p>
          <p
            class="chakra-text css-eo8jpy"
          >
            pt
          </p>
        </div>
      </div>
    </div>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;
